refactor; add Accessor.Query helper